# mc-mdp-treewidth

./: CMakeLists.txt  README.md  TreeDecomposition.h  main.c  plotResults.py  readme.md  runall.sh  vector.h
Main-MC/: example.txt  example2.txt  main.c  tree_decomposition.c  tree_decomposition.h
Main-SLE/: derive_independent_eqs.h  example.txt  example2.txt  gaussian_elimination.h  gram_schmidt.h  main.c  tree_decomposition.c  tree_decomposition.h
benchmark/: treewidth.py
benchmark/dacapobenchmark/: README.md
benchmark/prism/: README.md  test.txt  transformer.py
benchmarks/dacapobenchmark/: pom.xml  run.sh
benchmarks/prism/: graph.txt  inp.txt  join.py  out.txt  results.txt  transformer.py  tree.txt  treewidth.py
commons/: gaussian_elim.h  mc_treedec.c  mc_treedec.h
experiments/gaus/: gaus_mcprob_test.c  gaussian_elim.h
gaussian_elimination/: gaussian_elim.h  mc_eq_reformatter.py
lpsolve/mdp/: ans.txt  mdp_solver.py  out.txt  run.sh
lpsolve/mdp-si/: ans.txt  mdp_solver.py  out.txt  res.txt  run.sh
matlab/mc-discsum/: convert_to_matlab_system.cpp  results.txt  runall.sh
matlab/mc-hitting/: convert_to_matlab_system.cpp  results.txt  runall.sh
matlab/mdp-discsum/: results.txt  runall.sh
matlab/mdp-hitting/: convert_to_matlab_system.cpp  results.txt  runall.sh
mc/: example.txt  mc_main.c  mc_solve.h  mc_treedec.c  mc_treedec.h
mc/discsum/: example2.txt  mc_discsum_main.c  mc_discsum_solve.h
mc/mc_discsum/: example.txt  mc_discsum_main.c  mc_discsum_solve.h
mc/mc_expsum/: mc_expsum_main.c  mc_expsum_solve.h
mc/mc_hitprob/: mc_hitprob_solve.h  mc_hitptob_main.c
mc/mc_utils/: mcdiscsum_reformat.py  mcprob_reformat.py  reformat_input  reformat_input.py
mc_discsum/gauss/: mc_discsum_gauss.c  run.sh
mc_discsum/gurobi/: run.sh
mc_discsum/matlab/: runall.sh
mc_discsum/ours/: example3.txt  mc_discsum_main.c  mc_discsum_solve.h  run.sh
mc_hitprob/gauss/: mc_hitprob_gauss.c  run.sh
mc_hitprob/gurobi/: mc_solver.py  run.sh
mc_hitprob/matlab/: convert_to_matlab_system.cpp  runall.sh
mc_hitprob/ours/: example2.txt  mc_hitprob_solve.h  mc_hitptob_main.c  run.sh
mc_hitprob/prism/: run.sh
mc_hitprob/storm/: run.sh
mdp/: policy_iter.c
mdp/mdp_discsum/: discsum_policy_iter.c
mdp/mdp_hitprob/: example.txt  hitprob_policy_iter.c
mdp/mdp_utils/: mdpprob_reformat.py  mdpsum_reformat.py
mdp_discsum/gurobi/: mdp_solver.py  run.sh
mdp_discsum/lpsolve/: mdp_solver.py  run.sh
mdp_discsum/matlab/: convert_to_matlab_system.cpp  runall.sh
mdp_discsum/ours/: discsum_policy_iter.c  example.txt  run.sh
mdp_discsum/strategy-iteration/: run.sh
mdp_discsum/value-iteration/: run.sh  value-iteration.cpp
mdp_hitprob/gurobi/: mdp_solver.py  run.sh
mdp_hitprob/lpsolve/: run.sh
mdp_hitprob/matlab/: runall.sh
mdp_hitprob/ours/: hitprob_policy_iter.c  run.sh
mdp_hitprob/prism/: run.sh
mdp_hitprob/storm/: calc_time.py  run.sh
mdp_hitprob/strategy-iteration/: run.sh  strategy-iteration.cpp
results/: mc_discsum_gaussian  mc_discsum_ours  mc_hitporb.md  mc_hitporb_ours_&_gaussian.md  mdp_discsum_gaussian  mdp_discsum_ours  mdp_hitporb.md  mdp_hitprob_gaussian  mdp_hitprob_ours
sle/: derive_independent_eqs.h  example.txt  example3.txt  main.c  sle_main.c  sle_treedec.c  sle_treedec.h  tree_decomposition.c  tree_decomposition.h  vector.c
utils/: mcdiscsum_reformat.py  mdpprob_reformat.py  mdpsum_reformat.py
(+23179 files in other folders)
